--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ yarn-error.log*
 lerna-debug.log*
 
 # dotenv environment variables file
-.env
-.env.*
+# .env
+.env.development
 
 # Runtime data
 pids
