--- a/.env/.env.production
+++ b/.env/.env.production
@@ -11,7 +11,7 @@ REDIS_PORT=6379
 # postgres
 POSTGRES_HOST='dev.tp.rds.thingsplatform.co.kr'
 POSTGRES_PORT=5432
-POSTGRES_DATABASE='tpdev3'
+POSTGRES_DATABASE='ccs-qa'
 POSTGRES_USERNAME='companywe'
 POSTGRES_PASSWORD='C0mpanyw2*'
 # GOOGLE
