--- a/.env/.env.development
+++ b/.env/.env.development
@@ -11,7 +11,7 @@ REDIS_PORT=6379
 # postgres
 POSTGRES_HOST='dev.tp.rds.thingsplatform.co.kr'
 POSTGRES_PORT=5432
-POSTGRES_DATABASE='tpdev3'
+POSTGRES_DATABASE='ccs-qa'
 POSTGRES_USERNAME='companywe'
 POSTGRES_PASSWORD='C0mpanyw2*'
 # GOOGLE
@@ -24,6 +24,4 @@ TOKEN_URL='https://oauth2.googleapis.com/token'
 USER_INFO_URL='https://www.googleapis.com/oauth2/v2/userinfo'
 # S3
 S3_BUCKET='coldchaingate'
-S3_ACCESS_KEY='AKIAUUZAYQCVADZI7KPW'
-S3_SECRET_KEY='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'
 S3_REGION='ap-northeast-2'
